--- a/src/main/resources/templates/public/main.html
+++ b/src/main/resources/templates/public/main.html
@@ -49,5 +49,8 @@
 <form th:action="@{/logout}" method="post">
     <input type="submit" value="Logout"/>
 </form>
+<form th:action="@{/reissue}" method="post">
+    <button type="submit">Reissue Tokens</button>
+</form>
 </body>
 </html>
