--- a/src/main/resources/templates/public/admin.html
+++ b/src/main/resources/templates/public/admin.html
@@ -5,6 +5,18 @@
   <title>Admin Dashboard</title>
   <style>
     /* Add your own CSS here */
+    td {
+      border-collapse: collapse;
+      border: 1px solid black;
+      padding: 0;
+      margin: 0;
+    }
+
+    table {
+      border-collapse: collapse;
+      margin: 0;
+      padding: 0;
+    }
   </style>
 </head>
 <body>
@@ -19,7 +31,7 @@
     <th>ID</th>
     <th>Name</th>
     <th>Email</th>
-    <th>Status</th>
+    <th>Role</th>
     <th>Actions</th>
   </tr>
   </thead>
@@ -27,9 +39,9 @@
   <!-- Add table rows with member data using a loop -->
   <tr th:each="member : ${members}">
     <td th:text="${member.id}"></td>
-    <td th:text="${member.name}"></td>
+    <td th:text="${member.username}"></td>
     <td th:text="${member.email}"></td>
-    <td th:text="${member.status}"></td>
+    <td th:text="${member.userRole}"></td>
     <td>
       <button th:onclick="'editMember(' + ${member.id} + ')'">Edit</button>
       <button th:onclick="'deleteMember(' + ${member.id} + ')'">Delete</button>
@@ -41,7 +53,7 @@
 <h2>Currently Connected Members</h2>
 <ul>
   <!-- Add list items with connected member data using a loop -->
-  <li th:each="connectedMember : ${connectedMembers}" th:text="${connectedMember.name}"></li>
+  <li th:each="connectedMember : ${connectedMembers}" th:text="'  userId : ' + ${connectedMember.id} + ' | username : ' + ${connectedMember.username} + ' |'"></li>
 </ul>
 
 <form id="logout" th:action="@{/logout}" method="post">
